--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- --------- FAVICON ---------- -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
-    <title>Sahitya K  | Industrial Designer</title>
-    <meta name="Description" content="Indian Industrial Designer"/>
+    <title>Sahitya Kashyap | Industrial Design Portfolio</title>
+    <meta name="Description" content="Sahitya: Industrial Designer with a Manufacturing Background, specializing in CAD. Committed to creating physical products that deliver exceptional experiences to all stakeholders."/>
     <meta name="Keyword" content="Industrial Designer, Indian Industrial Designer, Computational Designer, Rhino, Surface Modelling, CAD Expert, CAD, Modelling, Realistic Rendering, Rendering, Designer, Hire Designer, Good Designer, Designer in India, Engineer, Design Engineer"/>
     <meta name="Author" content="Sahitya Kashyap"/>
     <link href="https://sahityakashyap.in/" rel="canonical"/>
@@ -25,7 +25,7 @@
     <!-- --------------- HEADER --------------- -->
       <nav id="header">
         <div class="nav-logo">
-            <p class="nav-name">SAHITYa</p>
+            <p class="nav-name">SAHITYA</p>
             <span>.</span>
         </div>
         <div class="nav-menu" id="myNavMenu">
