--- a/branding.html
+++ b/branding.html
@@ -13,7 +13,7 @@
     <!-- --------- FAVICON ---------- -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
-    <title>Coordinate War</title>
+    <title>Oil Packaging</title>
 </head>
 <body>
     <div class="container">
@@ -42,27 +42,18 @@
 
       <div class="portfolio-item">
         <div class="containerimages">
-            <img src="assets/coordinatewar/1.png">
-            <img src="assets/coordinatewar/2.jpg">
-            <img src="assets/coordinatewar/3.jpg">
-            <img src="assets/coordinatewar/4.jpg">
-            <img src="assets/coordinatewar/5.jpg">
-            <img src="assets/coordinatewar/6.jpg">
-            <img src="assets/coordinatewar/7.jpg">
-            <img src="assets/coordinatewar/8.jpg">
-            <img src="assets/coordinatewar/9.jpg">
-            <img src="assets/coordinatewar/10.jpg">
-            <img src="assets/coordinatewar/11.jpg">
-            <img src="assets/coordinatewar/12.jpg">
-            <img src="assets/coordinatewar/13.jpg">
-            <img src="assets/coordinatewar/14.jpg">
-            <img src="assets/coordinatewar/15.jpg">
-            <img src="assets/coordinatewar/16.jpg">
-            <img src="assets/coordinatewar/17.jpg">
-            <img src="assets/coordinatewar/18.png">
-            <img src="assets/coordinatewar/19.png">
-            <img src="assets/coordinatewar/20.png">
-            <img src="assets/coordinatewar/21.png">
+            <img src="assets/branding/1.jpg">
+            <img src="assets/branding/2.jpg">
+            <img src="assets/branding/3.jpg">
+            <img src="assets/branding/4.jpg">
+            <img src="assets/branding/5.jpg">
+            <img src="assets/branding/6.jpg">
+            <img src="assets/branding/7.jpg">
+            <img src="assets/branding/8.jpg">           
+            <img src="assets/branding/9.jpg">
+            <img src="assets/branding/10.jpg">
+            <img src="assets/branding/11.jpg">
+            <img src="assets/branding/12.jpg">
         </div>
     </div>
     <!-- --------------- FOOTER --------------- -->
