--- a/index.html
+++ b/index.html
@@ -112,15 +112,20 @@
                 <h1>Projects</h1>
             </div>
             <div class="project-container">
-                <div class="project-box" onclick="redirectToInternshipPage()">
+              <div class="project-box" onclick="redirectToInternshipPage()">
                     <i class="uil uil-briefcase-alt"></i>
                     <h3>Coordinate War</h3>
                     <label>Toy Design Internship Project</label>
                   </div>
-              <div class="project-box">
+              <div class="project-box" onclick="redirectToOilPackagingPage()">
                   <i class="uil uil-users-alt"></i>
-                  <h3>Internship 2</h3>
-                  <label>Toy & Game Design Project</label>
+                  <h3>Cooking Oil Packaging</h3>
+                  <label>Packaging Design Project</label>
+              </div>
+              <div class="project-box" onclick="redirectToBrandingPage()">
+                <i class="uil uil-users-alt"></i>
+                <h3>Bakery Branding</h3>
+                <label>Branding and Packaging for Home Bakery</label>
               </div>
               <div class="project-box">
                   <i class="uil uil-flask"></i>
