--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="project-box" onclick="redirectToBrandingPage()">
                 <i class="uil uil-users-alt"></i>
                 <h3>Bakery Branding</h3>
-                <label>Branding and Packaging for Home Bakery</label>
+                <label>Branding and Packaging</label>
               </div>
               <div class="project-box">
                   <i class="uil uil-flask"></i>
