--- a/internship.html
+++ b/internship.html
@@ -26,7 +26,7 @@
             <div class="nav-menu" id="myNavMenu">
                 <ul class="nav_menu_list">
                     <li class="nav_list">
-                        <a href="index.html" class="nav-link active-link">Back</a>
+                        <a href="index.html#projects" class="nav-link active-link">Back</a>
                         <div class="circle"></div>
                     </li>
                 </ul>
