--- a/index.html
+++ b/index.html
@@ -216,19 +216,20 @@
                 </div>
              </div>
              <div class="col">
-                <div class="form-control">
+                <form method="post" action="https://script.google.com/macros/s/AKfycbyy2ndA23j40U3bSUHXW53PEd1qUjkt_CTVMz8Zb5HWcs9hOZHSitcaK53kn05xH-Chcg/exec" name="form-control">
                     <div class="form-inputs">
-                        <input type="text" class="input-field" placeholder="Name">
-                        <input type="text" class="input-field" placeholder="Email">
+                        <input type="text" name="your-name" placeholder="Name">
+                        <input type="text" name="your-number" placeholder="Email">
                     </div>
                     <div class="text-area">
-                        <textarea placeholder="Message"></textarea>
+                        <textarea name="message" placeholder="Message"></textarea>
                     </div>
                     <div class="form-button">
                         <button class="btn">Send <i class="uil uil-message"></i></button>
                     </div>
-                </div>
+                </form>
              </div>
+             <script src="googleSheet.js"></script>
           </div>
        </section>
 
