--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
              </div>
              <div class="col">
                 <form method="post" action="https://script.google.com/macros/s/AKfycbyy2ndA23j40U3bSUHXW53PEd1qUjkt_CTVMz8Zb5HWcs9hOZHSitcaK53kn05xH-Chcg/exec" name="form-control">
+                  <div class="form">
                     <div class="form-inputs">
                         <input type="text" name="your-name" placeholder="Name">
                         <input type="text" name="your-number" placeholder="Email">
@@ -235,6 +236,7 @@
                     <div class="form-button">
                         <button class="btn">Send <i class="uil uil-message"></i></button>
                     </div>
+                  </div>    
                 </form>
              </div>
              <script src="googleSheet.js"></script>
