hehe my mistake

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- --------------- HEADER --------------- -->
       <nav id="header">
         <div class="nav-logo">
-            <p class="nav-name">SAHITYA</p>
+            <p class="nav-name">Sahitya</p>
             <span>.</span>
         </div>
         <div class="nav-menu" id="myNavMenu">
@@ -60,9 +60,9 @@
             <button class="btn"><a href="https://drive.usercontent.google.com/download?id=1YUAAjT19SmIX985RkIle2R7s-fsqEkry&export=download&authuser=2&confirm=t&uuid=a62fa281-5e98-41a3-9bb5-7f4e0ba653f6&at=APZUnTV2h6R9c5e2icsz0SZkUJpe:1706527350546" download>Download CV <i class="uil uil-import"></i></a></button>
 
         </div>
-        <!-- <div class="nav-menu-btn">
+        <div class="nav-menu-btn">
             <i class="uil uil-bars" onclick="myMenuFunction()"></i>
-        </div> -->
+        </div>
       </nav>
 
 
