logo back to it

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- --------------- HEADER --------------- -->
       <nav id="header">
         <div class="nav-logo">
-            <p class="nav-name">Sahitya</p>
+            <p class="nav-name">SAHITYA</p>
             <span>.</span>
         </div>
         <div class="nav-menu" id="myNavMenu">
