--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
           <div class="featured-image">
             <div class="image">
-                <img src="assets/images/CAR.jpg" alt="DesignerCat">
+                <img src="assets/images/sahityaKashyap.jpg" alt="Sahitya Kashyap Industrial Designer">
             </div>
           </div>
           <div class="scroll-icon-box">
