--- a/index.html
+++ b/index.html
@@ -121,22 +121,25 @@
             </div>
             <div class="project-container">
               <div class="project-box" onclick="redirectToInternshipPage()">
-                    <i class="uil uil-briefcase-alt"></i>
+                    <!-- <i class="uil uil-briefcase-alt"></i> -->
                     <h3>Coordinate War</h3>
                     <label>Toy Design Internship Project</label>
-                  </div>
+                    <img class="projectimage" src="assets/coordinatewar/19.png" alt="Coordinate War Toy">
+              </div>
               <div class="project-box" onclick="redirectToOilPackagingPage()">
-                  <i class="uil uil-users-alt"></i>
-                  <h3>Cooking Oil Packaging</h3>
+                  <!-- <i class="uil uil-users-alt"></i> -->
+                  <h3>Oil Packaging</h3>
                   <label>Packaging Design Project</label>
+                  <img class="projectimage" src="assets/oilpackaging/Major Project11.jpg" alt="Oil Packaging">
               </div>
               <div class="project-box" onclick="redirectToBrandingPage()">
-                <i class="uil uil-users-alt"></i>
+                <!-- <i class="uil uil-users-alt"></i> -->
                 <h3>Bakery Branding</h3>
                 <label>Branding and Packaging</label>
+                <img class="projectimage" src="assets/branding/11.jpg" alt="Bakery Branding">
               </div>
               <div class="project-box">
-                  <i class="uil uil-flask"></i>
+                  <!-- <i class="uil uil-flask"></i> -->
                   <h3>Experimental Work</h3>
                   <label>Projects done while learning</label>
               </div>
