--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                 <label>Branding and Packaging</label>
                 <img class="projectimage" src="assets/branding/11.jpg" alt="Bakery Branding">
               </div>
-              <div class="project-box">
-                  <!-- <i class="uil uil-flask"></i> -->
+              <!-- <div class="project-box">
+                  <i class="uil uil-flask"></i> 
                   <h3>Experimental Work</h3>
                   <label>Projects done while learning</label>
-              </div>
+              </div> -->
             </div>
          </section>
 
@@ -196,14 +196,14 @@
                     </div>
                 </div>
                 <div class="skills-box">
-                    <div class="skills-header">
+                    <!-- <div class="skills-header">
                         <h3>Soft Skills</h3>
                     </div>
                     <div class="skills-list">
                         <span>MySQL</span>
                         <span>PostgreSQL</span>
                         <span>MongoDB</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
           </div>
