--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn"><a href="https://drive.usercontent.google.com/download?id=1YUAAjT19SmIX985RkIle2R7s-fsqEkry&export=download&authuser=2&confirm=t&uuid=a62fa281-5e98-41a3-9bb5-7f4e0ba653f6&at=APZUnTV2h6R9c5e2icsz0SZkUJpe:1706527350546" download>Download CV <i class="uil uil-import"></i></a></button>
+            <button class="btn"><a href="https://drive.usercontent.google.com/download?id=1GEXtBntq0FdfXy9fyE4nS1nMZt630KIo&export=download&authuser=1" download>Download CV <i class="uil uil-import"></i></a></button>
 
         </div>
         <div class="nav-menu-btn">
@@ -83,7 +83,7 @@
             </div>
             <div class="featured-text-btn">
                 <button class="btn blue-btn" onclick="window.location.href='mailto:design.er.saahi@gmail.com?subject=Join Our Team: [Job Title] Opportunity at [Company Name]&body=Hi, I want to talk about an Opportunity at our Organisation'">Hire Me</button>
-                <button class="btn"><a href="https://drive.usercontent.google.com/download?id=1YUAAjT19SmIX985RkIle2R7s-fsqEkry&export=download&authuser=2&confirm=t&uuid=a62fa281-5e98-41a3-9bb5-7f4e0ba653f6&at=APZUnTV2h6R9c5e2icsz0SZkUJpe:1706527350546" download>Download CV <i class="uil uil-import"></i></a></button>
+                <button class="btn"><a href="https://drive.usercontent.google.com/download?id=1GEXtBntq0FdfXy9fyE4nS1nMZt630KIo&export=download&authuser=1" download>Download CV <i class="uil uil-import"></i></a></button>
             </div>
             <div class="social_icons">
                 <a href="https://www.instagram.com/design.er.saahi/" target="_blank" rel="noopener noreferrer">
@@ -159,7 +159,7 @@
                         I possess the capability to simultaneously contribute to various stages of the product development process, including research, ideation, prototyping, engineering, and manufacturing/tooling.
                     </p>
                     <div class="about-btn">
-                        <button class="btn"><a href="https://drive.usercontent.google.com/download?id=1YUAAjT19SmIX985RkIle2R7s-fsqEkry&export=download&authuser=2&confirm=t&uuid=a62fa281-5e98-41a3-9bb5-7f4e0ba653f6&at=APZUnTV2h6R9c5e2icsz0SZkUJpe:1706527350546" download>Download CV <i class="uil uil-import"></i></a></button>
+                        <button class="btn"><a href="https://drive.usercontent.google.com/download?id=1GEXtBntq0FdfXy9fyE4nS1nMZt630KIo&export=download&authuser=1" download>Download CV <i class="uil uil-import"></i></a></button>
                     </div>
                 </div>
             </div>
