--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
                         <span>Basic Electronics</span>
                         <span>Arduino</span>
                         <span>GD&T</span>
+                        <span>Computational Design</span>
                     </div>
                 </div>
                 <div class="skills-box">
@@ -186,6 +187,7 @@
                     </div>
                     <div class="skills-list">
                         <span>Rhino</span>
+                        <span>Grasshopper</span>
                         <span>Keyshot</span>
                         <span>Fusion 360</span>
                         <span>Solidworks</span>
