--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                 <p>I'm <span class="typedText"></span></p>
             </div>
             <div class="featured-text-info">
-                <p>Pre-Final Industrial UX Design Student at DTU | Ex-TRTC- DITE | North India Gold Medalist in Mechanical Engineering CAD in IndiaSkills 2021 | Certified Professional M-CAD Solidworks| Parametric Design | Computational Design | Arduino Enthusiast.
+                <p>An Engineer turned Industrial Designer driven by a relentless curiosity for every nuance in Design & Engineering.  With hands-on experience on the <strong>Shop floor</strong>, a unique perspective that enriches my approach to crafting solutions.<br>
+                    Skill set ranges from Sketching & CAD to Additive Manufacturing & <strong>Tool Design.</strong><br> <em> Know more in the CV</em>👇
                 </p>
             </div>
             <div class="featured-text-btn">
