--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <meta name="theme-color" content="#ffffff">
 
     <title>Sahitya Kashyap | Industrial Design Portfolio</title>
-    <meta name="Description" content="Sahitya: Industrial Designer with a Manufacturing Background, specializing in CAD. Committed to creating physical products that deliver exceptional experiences to all stakeholders."/>
-    <meta name="Keyword" content="Industrial Designer, Indian Industrial Designer, Computational Designer, Rhino, Surface Modelling, CAD Expert, CAD, Modelling, Realistic Rendering, Rendering, Designer, Hire Designer, Good Designer, Designer in India, Engineer, Design Engineer"/>
-    <meta name="Author" content="Sahitya Kashyap"/>
+    <meta name="description" content="Sahitya: Industrial Designer with a Manufacturing Background, specializing in CAD. Committed to creating physical products that deliver exceptional experiences to all stakeholders."/>
+    <meta name="keyword" content="Industrial Designer, Indian Industrial Designer, Computational Designer, Rhino, Surface Modelling, CAD Expert, CAD, Modelling, Realistic Rendering, Rendering, Designer, Hire Designer, Good Designer, Designer in India, Engineer, Design Engineer"/>
+    <meta name="author" content="Sahitya Kashyap"/>
     <link href="https://sahityakashyap.in/" rel="canonical"/>
 
 </head>
