--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <title>Sahitya Kashyap | Industrial Design Portfolio</title>
-    <meta name="description" content="Sahitya: Industrial Designer with a Manufacturing Background, specializing in CAD. Committed to creating physical products that deliver exceptional experiences to all stakeholders."/>
+    <meta name="description" content="Passionate Engineer turned Industrial Designer, exploring the nuances of design and engineering with a diverse skillset. Curiosity drives innovation."/>
     <meta name="keyword" content="Industrial Designer, Indian Industrial Designer, Computational Designer, Rhino, Surface Modelling, CAD Expert, CAD, Modelling, Realistic Rendering, Rendering, Designer, Hire Designer, Good Designer, Designer in India, Engineer, Design Engineer"/>
     <meta name="author" content="Sahitya Kashyap"/>
     <link href="https://sahityakashyap.in/" rel="canonical"/>
