--- a/index.html
+++ b/index.html
@@ -28,6 +28,31 @@
     <meta name="author" content="Sahitya Kashyap"/>
     <link href="https://sahityakashyap.in/" rel="canonical"/>
 
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "url": "https://www.sahityakashyap.in",
+          "name": "Sahitya Kashyap's Industrial Design Portfolio",
+          "description": "Showcasing innovative industrial design projects.",
+          "publisher": {
+            "@type": "Personal and Internship Work",
+            "name": "Your Design Studio",
+            "logo": {
+              "@type": "favicon",
+              "url": "assets/images/android-chrome-256x256.png",
+              "width": 256,
+              "height": 256
+            }
+          },
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https:/sahityakashyap.in/#projects",
+            "query-input": "Industrial Design Projects"
+          }
+        }
+        </script>
+
 </head>
 <body>
    <div class="container">
