--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         }
         </script>
 
+        <meta property="og:title" content="Industrial Design Portfolio">
+        <meta property="og:description" content="Passionate Engineer turned Industrial Designer, exploring the nuances of design and engineering with a diverse skillset. Curiosity drives innovation.">
+        <meta property="og:image" content="assets/images/android-chrome-256x256.png">
+        <meta property="og:url" content="https://sahityakashyap.in/">
+        <meta property="og:type" content="website">
+
 </head>
 <body>
    <div class="container">
