--- a/oilpackaging.html
+++ b/oilpackaging.html
@@ -50,6 +50,7 @@
 
       <div class="portfolio-item">
         <div class="containerimages">
+            <img src="assets/oilpackaging/Major Project11.jpg">
             <img src="assets/oilpackaging/Major Project.jpg">
             <img src="assets/oilpackaging/Major Project2.jpg">
             <img src="assets/oilpackaging/Major Project3.jpg">
