--- a/internship.html
+++ b/internship.html
@@ -68,6 +68,9 @@
             <img src="assets/coordinatewar/16.jpg">
             <img src="assets/coordinatewar/17.jpg">
             <img src="assets/coordinatewar/18.png">
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/TGUaLafrzao?si=GPCLo2vwyAAbXeZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
             <img src="assets/coordinatewar/19.png">
             <img src="assets/coordinatewar/20.png">
             <img src="assets/coordinatewar/21.png">
