--- a/index.html
+++ b/index.html
@@ -166,11 +166,12 @@
                 <label>Branding and Packaging</label>
                 <img class="projectimage" src="assets/branding/11.jpg" alt="Bakery Branding">
               </div>
-              <!-- <div class="project-box">
-                  <i class="uil uil-flask"></i> 
-                  <h3>Experimental Work</h3>
-                  <label>Projects done while learning</label>
-              </div> -->
+              <div class="project-box" onclick="redirectToSustainableDesignPage()">
+                  <!-- <i class="uil uil-flask"></i>  -->
+                  <h3>Sustainable Design</h3>
+                  <label>Sustainability Design Project</label>
+                  <img class="projectimage" src="liveimageproject.png" alt="Sustainable Design">
+              </div>
             </div>
          </section>
 
