--- a/sustainabledesign.html
+++ b/sustainabledesign.html
@@ -48,13 +48,28 @@
             </div> -->
           </nav>
 
-      <div class="portfolio-item-small">
+    <div class="portfolio-item-small">
         <div class="containerimages">
-            <img src="assets/sustainabledesign/Cover.png">
-            <img src="assets/sustainabledesign/method.png"> 
-            <img src="assets/sustainabledesign/findings.png">
+
+            <section class="section" id="concept">
+                <img src="assets/sustainabledesign/Cover.png">
+            <section>
+
+            <section class="section" id="method">
+                <img src="assets/sustainabledesign/method.png">
+            </section>
+
+            <section class="section" id="finding"> 
+                <img src="assets/sustainabledesign/findings.png">
+            </section>
+
+            <section class="section" id="define"> 
+                <div class="embeded">
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FYCNdzUXikyydtgwR4y942P%2FSustainable-Design%3Ftype%3Dwhiteboard%26node-id%3D0%253A1%26t%3DHzqWW9cAHB9E4OmJ-1" allowfullscreen></iframe>
+                </div>
+            </section>
         </div>
-    </div>
+     </div>
     <!-- --------------- FOOTER --------------- -->
     <footer>
         <div class="top-footer">
@@ -62,6 +77,7 @@
         </div>
         <div class="middle-footer">
             <ul class="footer-menu">
+
                 
             </ul>
         </div>
@@ -79,6 +95,7 @@
                 <div class="icon"><i class="uil uil-whatsapp"></i></div>
             </a>
         </div>
+
         <div class="bottom-footer">
             <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Sahitya Kashyap</a> - All rights reserved</p>
         </div>
