--- a/sustainabledesign.html
+++ b/sustainabledesign.html
@@ -64,6 +64,7 @@
             </section>
 
             <section class="section" id="define"> 
+                <img src="assets/sustainabledesign/define.png">
                 <div class="embeded">
                     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FYCNdzUXikyydtgwR4y942P%2FSustainable-Design%3Ftype%3Dwhiteboard%26node-id%3D0%253A1%26t%3DHzqWW9cAHB9E4OmJ-1" allowfullscreen></iframe>
                 </div>
