--- a/index.html
+++ b/index.html
@@ -226,16 +226,16 @@
                         <span>Adobe Indesign</span>                        
                     </div>
                 </div>
-                <div class="skills-box">
-                    <!-- <div class="skills-header">
+                <!-- <div class="skills-box">
+                    <div class="skills-header">
                         <h3>Soft Skills</h3>
                     </div>
                     <div class="skills-list">
                         <span>MySQL</span>
                         <span>PostgreSQL</span>
                         <span>MongoDB</span>
-                    </div> -->
-                </div>
+                    </div>
+                </div> -->
             </div>
           </div>
        </section>
