--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <button class="btn"><a href="https://drive.usercontent.google.com/download?id=1GEXtBntq0FdfXy9fyE4nS1nMZt630KIo&export=download&authuser=1" download>Download CV <i class="uil uil-import"></i></a></button>
             </div>
             <div class="social_icons">
-                <a href="https://www.instagram.com/design.er.saahi/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.instagram.com/sahityakashyap.in/" target="_blank" rel="noopener noreferrer">
                     <div class="icon"><i class="uil uil-instagram"></i></div>
                 </a>
                 <a href="https://www.linkedin.com/in/sahityakashyap/" target="_blank" rel="noopener noreferrer">
@@ -148,7 +148,13 @@
                 <h1>Projects</h1>
             </div>
             <div class="project-container">
-              <div class="project-box" onclick="redirectToInternshipPage()">
+                <div class="project-box" onclick="redirectToCMFPage()">
+                    <!-- <i class="uil uil-briefcase-alt"></i> -->
+                    <h3>Wrist Watch Design</h3>
+                    <label>Industrial Design, CMF, Visualisation</label>
+                    <img class="projectimage" src="assets/ydxtitan/thumbnail.png" alt="Wrist Watch Design">
+              </div>
+                <div class="project-box" onclick="redirectToInternshipPage()">
                     <!-- <i class="uil uil-briefcase-alt"></i> -->
                     <h3>Coordinate War</h3>
                     <label>Toy Design Internship Project</label>
@@ -302,7 +308,7 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <a href="https://www.instagram.com/design.er.saahi/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/sahityakashyap.in/" target="_blank" rel="noopener noreferrer">
                 <div class="icon"><i class="uil uil-instagram"></i></div>
               </a>
               <a href="https://www.linkedin.com/in/sahityakashyap/" target="_blank" rel="noopener noreferrer">
