--- a/sustainabledesign.html
+++ b/sustainabledesign.html
@@ -83,7 +83,7 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <a href="https://www.instagram.com/design.er.saahi/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/sahityakashyap.in/" target="_blank" rel="noopener noreferrer">
                 <div class="icon"><i class="uil uil-instagram"></i></div>
               </a>
               <a href="https://www.linkedin.com/in/sahityakashyap/" target="_blank" rel="noopener noreferrer">
