--- a/ydxtitan.html
+++ b/ydxtitan.html
@@ -21,7 +21,7 @@
     <meta name="msapplication-config" content="assets/images/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Oil Packaging</title>
+    <title>RetroFuturism Watch</title>
 </head>
 <body>
     <div class="container">
@@ -50,20 +50,19 @@
 
       <div class="portfolio-item">
         <div class="containerimages">
-            <img src="assets/oilpackaging/Major Project11.jpg">
-            <img src="assets/oilpackaging/Major Project.jpg">
-            <img src="assets/oilpackaging/Major Project2.jpg">
-            <img src="assets/oilpackaging/Major Project3.jpg">
-            <img src="assets/oilpackaging/Major Project4.jpg">
-            <img src="assets/oilpackaging/Major Project5.jpg">
-            <img src="assets/oilpackaging/Major Project6.jpg">
-            <img src="assets/oilpackaging/Major Project7.jpg">
-            <img src="assets/oilpackaging/Major Project8.jpg">
-            <img src="assets/oilpackaging/Major Project9.jpg">
-            <img src="assets/oilpackaging/Major Project10.jpg">
-            <img src="assets/oilpackaging/Major Project11.jpg">
-            <img src="assets/oilpackaging/Major Project12.jpg">
-            <img src="assets/oilpackaging/Major Project13.jpg">            
+            <img src="assets/ydxtitan/Cover.png">
+            <img src="assets/ydxtitan/Brief.png">
+            <img src="assets/ydxtitan/Process.png">
+            <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/921681057?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="600" height="600" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="PromoVideo- RetroFuturism Watch"></iframe>
+            </div> 
+            <img src="assets/ydxtitan/Render 1.png"> 
+            <img src="assets/ydxtitan/Render 2.png"> 
+            <img src="assets/ydxtitan/Render 3.png"> 
+            <img src="assets/ydxtitan/Render 4.png"> 
+            <img src="assets/ydxtitan/Render 6.png"> 
+            <img src="assets/ydxtitan/Thanks.png"> 
+
         </div>
     </div>
     <!-- --------------- FOOTER --------------- -->
