--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
              <div class="col">
                 <div class="contact-info">
                     <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                    <p><i class="uil uil-envelope"></i> Email: design.er.saahi.com</p>
+                    <p><i class="uil uil-envelope"></i> Email: design.er.saahi@gmail.com</p>
                     <p><i class="uil uil-phone"></i> Tel: +91-8800633820</p>
                 </div>
              </div>
