--- a/ydxtitan.html
+++ b/ydxtitan.html
@@ -28,8 +28,7 @@
         <!-- --------------- HEADER --------------- -->
           <nav id="header">
             <div class="nav-logo">
-                <p class="nav-name">SAHITYA</p>
-                <span>.</span>
+                <img class="projectimage" src="assets/images/logopngsk.png" alt="logo">
             </div>
             <div class="nav-menu" id="myNavMenu">
                 <ul class="nav_menu_list">
