--- a/ydxtitan.html
+++ b/ydxtitan.html
@@ -52,6 +52,7 @@
             <img src="assets/ydxtitan/Cover.png">
             <img src="assets/ydxtitan/Brief.png">
             <img src="assets/ydxtitan/Process.png">
+            <img src="assets/ydxtitan/Process 2.png">
             <div class="video-container">
                 <iframe src="https://player.vimeo.com/video/921681057?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="600" height="600" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="PromoVideo- RetroFuturism Watch"></iframe>
             </div> 
